[gd_scene load_steps=13 format=2]

[ext_resource path="res://scripts/Main_Menu.gd" type="Script" id=1]
[ext_resource path="res://assets/Buttons/Font/upheavtt.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/Buttons/PNG/red_button01.png" type="Texture" id=3]
[ext_resource path="res://assets/Buttons/Font/04B_30__.TTF" type="DynamicFontData" id=4]
[ext_resource path="res://assets/Buttons/PNG/red_button02.png" type="Texture" id=5]
[ext_resource path="res://assets/Buttons/Font/kenvector_future.ttf" type="DynamicFontData" id=6]

[sub_resource type="Theme" id=1]

[sub_resource type="DynamicFont" id=2]
size = 110
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
size = 13
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 4 )

[node name="MainMenu" type="Node2D"]
scale = Vector2( 0.625, 0.667 )
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
modulate = Color( 0.898039, 1, 0, 1 )
margin_right = 1024.0
margin_bottom = 600.0
theme = SubResource( 1 )

[node name="ColorRect" type="ColorRect" parent="Panel"]
margin_left = 20.0
margin_top = 70.0
margin_right = 1008.0
margin_bottom = 240.0

[node name="ColorRect2" type="ColorRect" parent="Panel"]
margin_left = 25.0
margin_top = 75.0
margin_right = 1003.0
margin_bottom = 235.0
color = Color( 0.823529, 0.188235, 0.188235, 1 )

[node name="RichTextLabel" type="RichTextLabel" parent="Panel"]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 43.5804
margin_top = 99.4839
margin_right = 1081.58
margin_bottom = 249.484
custom_fonts/normal_font = SubResource( 2 )
text = "OVER THREE DAYS"

[node name="Start" type="TextureButton" parent="Panel"]
margin_left = 420.0
margin_top = 320.0
margin_right = 610.0
margin_bottom = 499.0
texture_normal = ExtResource( 3 )
stretch_mode = 3

[node name="Label" type="Label" parent="Panel/Start"]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 51.0
margin_top = 15.0
margin_right = 141.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 3 )
text = "START"
align = 1

[node name="Settings" type="TextureButton" parent="Panel"]
margin_left = 420.0
margin_top = 385.0
margin_right = 610.0
margin_bottom = 499.0
texture_normal = ExtResource( 3 )
stretch_mode = 3

[node name="Label" type="Label" parent="Panel/Settings"]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 40.0
margin_top = 15.0
margin_right = 141.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 3 )
text = "SETTINGS"
align = 1

[node name="Settings Warning" type="WindowDialog" parent="Panel"]
visible = true
margin_left = 300.0
margin_top = 250.0
margin_right = 728.0
margin_bottom = 450.0
rect_scale = Vector2( 0.625, 0.67 )
hint_tooltip = "Thanks for playing!"

[node name="RichTextLabel" type="RichTextLabel" parent="Panel/Settings Warning"]
margin_left = 60.0
margin_top = 20.0
margin_right = 378.0
margin_bottom = 150.0
custom_fonts/normal_font = SubResource( 4 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "Function not yet implemented, contact devs for more details.

Thanks for playing!

Love,
-Devs"

[node name="Back" type="TextureButton" parent="Panel/Settings Warning"]
margin_left = 121.0
margin_top = 135.0
margin_right = 307.0
margin_bottom = 175.927
texture_normal = ExtResource( 5 )
stretch_mode = 1

[node name="Label" type="Label" parent="Panel/Settings Warning/Back"]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 50.0
margin_top = 17.0
margin_right = 140.0
margin_bottom = 96.7897
custom_fonts/font = SubResource( 5 )
text = "Done!"
align = 1

[node name="Quit" type="TextureButton" parent="Panel"]
margin_left = 420.0
margin_top = 450.0
margin_right = 608.0
margin_bottom = 426.509
texture_normal = ExtResource( 3 )
stretch_mode = 3

[node name="Label2" type="Label" parent="Panel/Quit"]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 51.0
margin_top = 15.0
margin_right = 141.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 3 )
text = "QUIT"
align = 1

[node name="Quit Text" type="WindowDialog" parent="Panel"]
visible = true
margin_left = 300.0
margin_top = 250.0
margin_right = 728.0
margin_bottom = 450.0
rect_scale = Vector2( 0.625, 0.67 )
hint_tooltip = "Thanks for playing!"

[node name="RichTextLabel" type="RichTextLabel" parent="Panel/Quit Text"]
margin_left = 95.0
margin_top = 40.0
margin_right = 340.0
margin_bottom = 150.0
custom_fonts/normal_font = SubResource( 6 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "Thanks for playing!

Love,
-Devs"

[node name="Kill" type="TextureButton" parent="Panel/Quit Text"]
margin_left = 121.0
margin_top = 135.0
margin_right = 307.0
margin_bottom = 175.927
texture_normal = ExtResource( 5 )
stretch_mode = 1

[node name="Label2" type="Label" parent="Panel/Quit Text/Kill"]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 50.0
margin_top = 17.0
margin_right = 140.0
margin_bottom = 96.7897
custom_fonts/font = SubResource( 5 )
text = "Done!"
align = 1
[connection signal="pressed" from="Panel/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="Panel/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="Panel/Settings Warning/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="Panel/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="Panel/Quit Text/Kill" to="." method="_on_Kill_pressed"]
